# foundapp-backend

./: .env.example  .gitignore  .gitkeep  Pipfile  README.md  pyproject.toml  railway.json  render.yaml  requirements.txt  start.sh  test.txt
app/: __init__.py  auth.py  config.py  database.py  main.py
app/models/: __init__.py  liked_moment.py  match.py  message.py  moment.py  transaction.py  types.py  user.py
app/routers/: __init__.py  alipay.py  auth.py  chat.py  match.py  moments.py  privacy.py  terms.py  trtc.py  user.py  utils.py  wallet.py
app/services/: __init__.py  alipay_service.py
