[tool.poetry]
name = "foundapp-backend"
version = "1.0.0"
description = "FoundApp Backend API"
authors = ["FoundApp Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.2"
uvicorn = {extras = ["standard"], version = "0.27.1"}
python-multipart = "0.0.9"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
pydantic = "2.6.1"
pydantic-settings = "2.1.0"
cryptography = "42.0.2"
sqlalchemy = "2.0.25"
psycopg2-binary = "2.9.9"
aiosqlite = "0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
