[tool.poetry]
name = "foundapp-backend"
version = "0.1.0"
description = "FoundApp FastAPI Backend"
authors = ["Found Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.2"
uvicorn = {extras = ["standard"], version = "0.27.1"}
pydantic = "2.6.1"
pydantic-settings = "2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
